syntax = "proto3";

package memos.store;

option go_package = "gen/store";

enum RowStatus {
  ROW_STATUS_UNSPECIFIED = 0;

  NORMAL = 1;

  ARCHIVED = 2;
}
